# Currncy_rates

./: .env  README.md  currency.json  currency_converter.py  pyproject.toml  run_currency_converter.sh
